<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_my_calendar" />

                <TextView
                    android:id="@+id/summaryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:text="summaryDate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/summaryTotalCashLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summary_total_cash" />

                <TextView
                    android:id="@+id/summaryTotalCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/summary_total_cash"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/summaryTotalCheckLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summary_total_check" />

                <TextView
                    android:id="@+id/summaryTotalCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/summary_total_check"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/summaryTotalBankTransLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summary_bank_trans" />

                <TextView
                    android:id="@+id/summaryTotalBankTrans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/summary_bank_trans"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/summaryExpensesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summary_expenses" />

                <TextView
                    android:id="@+id/summaryExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/summary_expenses"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/summaryTotalCashOnHandLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summary_total_cashonhand" />

                <TextView
                    android:id="@+id/summaryTotalCashOnHand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/summary_total_cashonhand"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
